[tool.poetry]
name = "algorand-intro"
version = "0.1.0"
description = ""
authors = ["Joe Polny <joepolny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
py-algorand-sdk = "^2.5.0"
algokit-utils = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
